<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".Task8">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvControl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <TextView
        android:id="@+id/tvControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/displyHint"
        android:importantForAutofill="no"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/border"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnclear"
            android:layout_width="260dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnClearText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />

<!--        <Button-->
<!--            android:id="@+id/btnParenthesesOpen"-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="70dp"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:background="@drawable/button_background"-->
<!--            android:text="@string/btnParenthesesOpenText"-->
<!--            android:textColor="@color/border"-->
<!--            android:textSize="28sp"-->
<!--            app:layout_constraintStart_toEndOf="@+id/btnclear"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />-->

<!--        <Button-->
<!--            android:id="@+id/btnParenthesesClose"-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="70dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:background="@drawable/button_background"-->
<!--            android:text="@string/btnParenthesesCloseText"-->
<!--            android:textColor="@color/border"-->
<!--            android:textSize="28sp"-->
<!--            app:layout_constraintStart_toEndOf="@+id/btnParenthesesOpen"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />-->

        <Button
            android:id="@+id/btndivide"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnDivideText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnclear"
            app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnSevenText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnclear" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnEightText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btn7"
            app:layout_constraintTop_toBottomOf="@+id/btnclear" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnNineText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btn8"
            app:layout_constraintTop_toBottomOf="@+id/btnclear" />

        <Button
            android:id="@+id/btnmul"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnMultiplyText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btn9"
            app:layout_constraintTop_toBottomOf="@+id/btndivide" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnFourText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn7" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnFiveText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btn4"
            app:layout_constraintTop_toBottomOf="@+id/btn8" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnSixText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btn5"
            app:layout_constraintTop_toBottomOf="@+id/btn9" />

        <Button
            android:id="@+id/btnsub"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnSubtractText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btn6"
            app:layout_constraintTop_toBottomOf="@+id/btnmul" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnOneText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn4" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnTwoText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btn1"
            app:layout_constraintTop_toBottomOf="@+id/btn5" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnThreeText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btn2"
            app:layout_constraintTop_toBottomOf="@+id/btn6" />

        <Button
            android:id="@+id/btnadd"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnAddText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btn3"
            app:layout_constraintTop_toBottomOf="@+id/btnsub" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnZeroText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/btn2"
            app:layout_constraintStart_toStartOf="@+id/btn1"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnDecimalText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btn0"
            app:layout_constraintTop_toBottomOf="@+id/btn3" />

        <Button
            android:id="@+id/btnequal"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btnEqualsText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnDecimal"
            app:layout_constraintTop_toBottomOf="@+id/btnadd" />

        <ImageButton
            android:id="@+id/btnBackspace"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/btnBackspace"
            android:textColor="@color/border"
            app:layout_constraintEnd_toEndOf="@+id/btndivide"
            app:layout_constraintStart_toStartOf="@+id/btndivide"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_backspace" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>